--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="marker-remove-all-btn" style="margin: 10px">
       핀 모두 지우기
     </button>
-    <button id="export-btn" style="margin: 10px">추출하기</button>
+    <a href="#" id="export-btn" style="margin: 10px">추출하기</button>
   </body>
   <script type="text/javascript" src="./index.js"></script>
   <script
