--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Golden Egg</title>
   </head>
   <body>
-    <div id="map" style="width: 90%; height: 600px"></div>
+    <div id="map" style="width: 100%; height: 80vh"></div>
     <button id="marker-remove-all-btn" style="margin: 10px">
       핀 모두 지우기
     </button>
