--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     </button>
     <a href="#" id="export-btn" style="margin: 10px">추출하기</button>
   </body>
-  <script type="text/javascript" src="./index.js"></script>
+  <script type="text/javascript" src="./dist/index.js"></script>
   <script
     type="text/javascript"
     src="http://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=7hlrs74f17"
